--- a/manager/media/style/x1/style.css
+++ b/manager/media/style/x1/style.css
@@ -88,6 +88,20 @@ li, dd, blockquote {
     font-weight: bold;
 }
 
+.mutate-field-row {
+    height: 24px;
+}
+
+.mutate-field-label {
+    width: 120px;
+    text-align: left;
+}
+
+.mutate-field-title {
+    color: #444;
+    font-weight: bold;
+}
+
 .success {
     color: #090;
     font-weight: bold;
