--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -354,8 +354,9 @@ hr {
 }
 
 .split {
-    background: #556476 url(images/misc/line.gif) repeat-x;
-    height: 1px;
+    background: linear-gradient(180deg, #556476 0%, #556476 50%, transparent 50%, transparent 100%);
+    background-size: 100% var(--border-thin);
+    height: var(--border-thin);
     font-size: 0;
     clear: both;
     padding: 0;
