--- a/manager/media/style/AuroraFlow/style.css
+++ b/manager/media/style/AuroraFlow/style.css
@@ -606,6 +606,7 @@ input[type="checkbox"] {
     position: relative;
     width: 30px;
     height: 14px;
+    box-sizing: border-box;
     background: var(--gray-400);
     border: 1px solid var(--gray-500);
     border-radius: var(--radius-full);
